...
    <string name="select_employee">Select employee</string>
    <string name="amount">Amount</string>
    <string name="commit_paymenty">Commit paymenty</string>
    <string name="select_customer">Select customer</string>
    <string name="select_project">Select project</string>

    <string name="email_validation_error">Email not valid</string>
    <string name="password_validation_error">Password not valid</string>
</resources>
